# Python-Gilded-Rose-Kata

./: README.md  gilded_rose.py  pyproject.toml
items/: __init__.py  aged_brie_item.py  backstage_pass_item.py  item.py  normal_item.py  sulfuras_item.py
tests/: conftest.py  test_aged_brie_item.py  test_backstage_pass_item.py  test_base_requirements.py  test_normal_item.py  test_sulfuras_item.py
