[tool.poetry]
name = "python-gilded-rose-kata"
version = "0.1.0"
description = ""
authors = ["Jordan Griveau <jgriveau@yahoo.fr>"]
readme = "README.md"
packages = [{include = "python_gilded_rose_kata"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
